[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/mros/module/BehaviorTree/Util/BTGraph/BTGraph.gd" type="Script" id=1]
[ext_resource path="res://addons/mros/module/BehaviorTree/Util/BTGraph/BTGraphUI.gd" type="Script" id=2]

[node name="Surface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphEdit" type="GraphEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Context" type="PanelContainer" parent="UI"]
margin_right = 14.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Context"]
margin_left = 7.0
margin_top = 7.0
margin_right = 7.0
margin_bottom = 7.0

[node name="Menu" type="PanelContainer" parent="UI"]
margin_top = 556.0
margin_right = 14.0
margin_bottom = 570.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Menu"]
margin_left = 7.0
margin_top = 7.0
margin_right = 139.0
margin_bottom = 27.0

[node name="SaveBtn" type="Button" parent="UI/Menu/HBoxContainer"]
margin_right = 64.0
margin_bottom = 20.0
rect_min_size = Vector2( 64, 12 )
text = "Save"

[node name="LoadBtn" type="Button" parent="UI/Menu/HBoxContainer"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 20.0
rect_min_size = Vector2( 64, 0 )
text = "Load"

[node name="FileDialog" type="FileDialog" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -157.5
margin_top = -65.75
margin_right = 157.5
margin_bottom = 65.75
rect_min_size = Vector2( 250, 87.5 )

[connection signal="connection_request" from="GraphEdit" to="." method="_on_GraphEdit_connection_request"]
[connection signal="pressed" from="UI/Menu/HBoxContainer/SaveBtn" to="." method="_on_SaveBtn_pressed"]
[connection signal="pressed" from="UI/Menu/HBoxContainer/LoadBtn" to="." method="_on_LoadBtn_pressed"]
